# churn-customer

./: .gitignore  README.md  dockerfile  pyproject.toml
notebooks/: EDA.ipynb  modeling.ipynb
src/data/: data_loader.py  preprocess.py
