[project]
name = "churn-customer"
version = "0.1.0"
description = "Dependecies for project: churn"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "auto-mix-prep>=0.2.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "mlflow>=3",
    "numpy>=2.4.6",
    "optuna>=4.8.0",
    "pandas>=2.3.0,<3",
    "pandas-stubs>=2.2.0.20241218",
    "pydantic>=2.13.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "uvicorn>=0.47.0",
    "xgboost>=3.2.0",
    "shap>=0.47.0",
    "numba>=0.59.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pydentic>=0.0.1.dev3",
    "python-dotenv>=1.2.2",
    "joblib>=1.5.3",
    "great-expectations>=1.18.2",
    "pytest>=9.1.1",
]

# Heavy interactive notebooks are moved to development only
[dependency-groups]
dev = [
    "jupyter>=1.1.1"
]
